# ocean-surface

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  finish.sh  handoff.md  index.html  run-surface.sh  smoke.sh  style.css
.github/workflows/: ci.yml
audit/: ocean-surface-doc-boundary-audit.md
crates/ocean-gui/: Cargo.toml  MODEL_PICKER_SPEC.md
crates/ocean-gui/assets/icons/ocean-gui/: README.md
crates/ocean-gui/canvas-web/: index.html  package-lock.json  package.json
crates/ocean-gui/canvas-web/scripts/: inline-dist.mjs
crates/ocean-gui/canvas-web/src/: ledger.ts  main.tsx  oceanBridge.ts  styles.css
crates/ocean-gui/packaging/macos/: Info.plist
crates/ocean-gui/src/: app.rs  lib.rs  main.rs  workspace.rs
crates/ocean-gui/src/shell/: agent.rs  assets.rs  commands.rs  daemon.rs  editor_buffer.rs  editor_layout.rs  gui_control.rs  icons.rs  mod.rs  model.rs  rooms.rs  surface.rs  surface_host.rs  surface_livekit.rs  surface_livekit_client.rs  surface_livekit_session.rs  surface_livekit_video.rs  theme.rs  tldraw_adapter.rs  vault_index.rs  view.rs  watcher.rs
crates/ocean-gui/src/shell/canvas/: context.rs  hit_test.rs  layout.rs  ledger.rs  ledger_set.rs  mod.rs  patch.rs  persistence.rs  render.rs  templates.rs
crates/ocean-surface-proxy/: Cargo.toml
crates/ocean-surface-proxy/src/: main.rs
crates/ocean-surface-proxy/static/: longhouse.html
crates/ocean-surface-ui/: Cargo.toml
crates/ocean-surface-ui/src/: app.rs  call.rs  canvas.rs  components.rs  daemon.rs  gauntlet.rs  icons.rs  livekit.rs  main.rs  markdown.rs  model.rs  place_call.rs  rooms.rs  sessions.rs  transcript.rs  tts.rs  voice.rs  widget.rs
crates/ocean-surface-ui/src/voice/: listen.rs  mod.rs  mode.rs  vad.rs  wake.rs
deploy/: dev.risingtides.ocean-surface-proxy.plist  ocean-surface-proxy.sh
docs/: OCEAN_GPUI_CANVAS_LIVEKIT_SPEC.md  ocean-extension-context.html  ocean-extension-context.md  ocean-extension-manifesto.html
docs/superpowers/plans/: 2026-06-05-voice-agent-first-class.md
extension/: background.js  manifest.json  sidepanel.html  sidepanel.js
legacy-voice/cache/: cache-status-phrases-slow.mjs
legacy-voice/public/: app.js  index.html  manifest.webmanifest  sw.js
legacy-voice/src/: cli.mjs  ocean-client.mjs  web-server.mjs
ops/: README.md  install-surface-proxy.sh  uninstall-surface-proxy.sh
public/: manifest.webmanifest  sw.js
scripts/: build-extension.sh  bundle-ocean-gui-macos-app.sh  capture-gauntlet-cli.sh  deploy-ocean-gui-macbook.sh
voice/: .env.example  .gitignore  README.md  package.json
voice/cache/: cache-status-phrases.mjs
voice/config/: status-phrases.json  voice-agent-instructions.md
voice/desktop/: status-osd.py  toggle-wake.sh  voice-stop.sh
voice/public/: app.js  styles.css
voice/src/: daemon.mjs  ocean-client.mjs  web-server.mjs
voice/tts/: render-status-phrase.sh  speak-response.sh  speak-status.sh  xai-tts-wav.sh
