[workspace]
resolver = "2"
members = [
  "crates/ocean-surface-ui",
  "crates/ocean-surface-proxy",
  "crates/ocean-gui",
]
# `cargo build` (no -p) builds only the native proxy. The UI crate is a
# wasm-only target built via Trunk (or `-p ocean-surface-ui --target
# wasm32-unknown-unknown`), so excluding it from the default set avoids a
# pointless native compile of a browser binary.
default-members = ["crates/ocean-surface-proxy"]

# crates/ocean-gui is the native GPUI desktop face. It is intentionally not a
# default member so `cargo build` keeps the existing proxy-focused workflow.

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Risingtides-dev"]
rust-version = "1.82"
