[package]
name = "ocean-surface-proxy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "ocean-surface-proxy"
path = "src/main.rs"

[dependencies]
axum         = "0.8"
tokio        = { version = "1", features = ["full"] }
tower-http   = { version = "0.6", features = ["fs", "cors", "trace"] }
reqwest      = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "multipart"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64       = "0.22"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
