[package]
name = "ocean-surface-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

# A Trunk CSR app is a plain binary crate: src/main.rs + fn main() that
# mounts the Leptos app. No [lib] needed.

[dependencies]
leptos        = { version = "0.7", features = ["csr"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
wasm-bindgen  = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net      = { version = "0.6", features = ["http", "eventsource"] }
gloo-timers   = { version = "0.3", features = ["futures"] }
futures-util  = "0.3"
console_error_panic_hook = "0.1"
console_log   = "1"
log           = "0.4"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
web-sys = { version = "0.3", features = [
  "Window",
  "Location",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "HtmlFormElement",
  "Storage",
  "console",
  # Voice capture (push-to-talk → STT)
  "Navigator",
  "MediaDevices",
  "MediaStream",
  "MediaStreamConstraints",
  "MediaStreamTrack",
  "MediaRecorder",
  "MediaRecorderOptions",
  "BlobEvent",
  "Blob",
  "BlobPropertyBag",
  "Event",
  "Url",
  # TTS playback
  "HtmlAudioElement",
] }
js-sys = "0.3"

[features]
default = []
